Fix for landscape on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -701,9 +701,6 @@ and (orientation : landscape){
     right: 0;
     bottom: 0;
   }
-  .carousel-caption {
-    top: 47%;
-  }
   #fp-nav.right {
     left: 2% !important;
   }
@@ -718,11 +715,14 @@ and (orientation : landscape){
     padding: 0% 7% 0% 5%;
   }
   .centered-executives > h1 {
-    margin-top: 5px;
-    margin-bottom: 0px;
+    margin-top: 7px !important;
+    margin-bottom: 13px !important;
   }
   .centered-executives > .col-xs-12 {
-    margin-top: 10px;
+    margin-top: 0px;
+  }
+  .centered-executives > .col-xs-12 > a  > p {
+    margin-bottom: 0px;
   }
   .centered-events {
     padding: 2% 12% 5% 17%;
@@ -731,7 +731,7 @@ and (orientation : landscape){
     width: 100% !important;
   }
   .carousel-caption {
-    top: 37%;
+    top: 105px;
   }
   .select {
     margin-bottom: 10px;
@@ -746,7 +746,7 @@ and (orientation : landscape){
     font-size: 11px;
   }
   .logo {
-    margin: 1%;
+    margin: 0%;
   }
   .centered-contact {
     padding: 1% 5% 0% 5%;
@@ -759,8 +759,15 @@ and (orientation : landscape){
   }
   h1 {
     font-size: 30px;
-    margin-bottom: 5px;
-    margin-top: 5px;
+    margin-bottom: 5px !important;
+    margin-top: 0px !important;
+  }
+  .carousel-caption p {
+    font-size: 16px;
+    line-height: 1.4;
+  }
+  .container-fluid {
+      padding: 1% 2% 0% 2% !important;
   }
 } 
 @media screen and ( min-width: 800px ) {
